# proj-crypto-fluxor

./: .gitignore  Dockerfile  README.md  bithumb.py  btc_kor_premium_fluxor.py  cloudbuild.yaml  cloudrun-vm-orchestration.md  fastapi_app.py  load_bithumb_1d.py  load_btc_diff_per.py  load_crypto_marketcap.py  load_fear_and_greed.py  main.py  main.sh  main_cash_out.py  main_in_vm.py  poetry.pyproject.toml  pyproject.toml  run.sh  test.py  test.sh
src/: __init__.py  bithumb.py  coinmarketcap.py  connection.py  ctrend.py  ctrend_feature.py  ctrend_model.py  ctrend_model_v2.py  feature_store.py  logger.py  trader.py  upbit.py
src/config/: env.py  helper.py
src/connection/: bigquery.py  gcp_auth.py  slack.py
test/: modeling.ipynb
vm_orchestrator/: Dockerfile  cloudbuild.yaml  detach_ip.sh  entrypoint.sh  startup.sh
vm_utils/: 01 외부IP 세팅 가이드.md  02 Cloud Run을 통한 VM Job 실행 플로우.md  README.md  reset.sh  setup.sh  startup.sh
